--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.2.3",
     "json-server": "^0.17.3",
     "moment": "^2.29.4",
+    "party-js": "^2.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
